Upgrade dbus-java to 5.2.0 Closes #47294
Signed-off-by: rmartinc <rmartinc@redhat.com>